[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noshow-iq-62832"
version = "0.1.0"
description = "Patient No-Show Prediction API"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "pymongo",
    "scikit-learn",
    "pandas",
    "numpy",
    "joblib",
    "imbalanced-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["noshow_iq*"]